<resources>
    <string name="app_name">ENUBank</string>
    <string name="login_username">Электрондық пошта</string>
    <string name="login_password">Пароль</string>
    <string name="login_button">Кіру</string>
    <string name="login_register">Тіркеу</string>
    <string name="main_slogan">ENUBank-банк қосымшасы сізге бағытталған!</string>
    <string name="main_alredy_account">Сізде аккаунт бар ма? Жүйеге кіріңіз!</string>
    <string name="main_new_account">Жаңа мүше? Дәл қазір тіркеліңіз!</string>
    <string name="register_first_name">Аты</string>
    <string name="register_last_name">Тегі</string>
    <string name="register_email">Электрондық пошта</string>
    <string name="register_password">Пароль</string>
    <string name="register_confirm_password">Парольді растау</string>
    <string name="register_gender">Жынысы</string>
    <string name="register_female">Әйел</string>
    <string name="register_male">Ер</string>
    <string name="register_go_to_login">Кіру</string>
    <string name="register_IBAN">IBAN</string>
    <string name="invalid_firstName">Аты бос болмауы керек!</string>
    <string name="invalid_lastName">Тегі бос болмауы керек!</string>
    <string name="invalid_email">Электрондық пошта өрісі бос болмауы керек және @ болуы керек!</string>
    <string name="invalid_password">Пароль өрісі бос болмауы керек!</string>
    <string name="invalid_password2">Парольдер бірдей емес!</string>
    <string name="invalid_iban">IBAN өрісі бос болмауы керек!</string>
    <string name="register_succesful">Акаунт жазбаңыз сәтті жасалды !</string>
    <string name="title_activity_home"> </string>
    <string name="home">Басты бет</string>
    <string name="home_transactions">Транзакция</string>
    <string name="home_history">Транзакция тарихы</string>

    <string name="title_activity_contact">Байланыс</string>
    <string name="current_balance">Баланс</string>
    <string name="please_complete_the_details_of_the_transaction">Транзакция мәліметтерін толтырыңыз!</string>
    <string name="beneficiary_name">Алушының аты</string>
    <string name="amount">Сома</string>
    <string name="send_money">Ақша жіберу</string>
    <string name="error_beneficiar">Сіз транзакцияны аяқтау үшін жібергіңіз келетін ақша сомасын көрсетуіңіз керек!</string>
    <string name="error_amount">Сіз транзакцияны аяқтау үшін жібергіңіз келетін ақша сомасын көрсетуіңіз керек!</string>
    <string name="error_status">Транзакцияны аяқтау үшін Мәртебені толтыру керек!</string>
    <string name="error_account">Қате тіркелгісі</string>
    <string name="money_send">Сіздің ақшаңыз сәтті жіберілді!</string>
    <string name="title_activity_money">Ақша аудару</string>
    <string name="title_activity_select">Менің аккаунтым</string>
    <string name="title_infos">Информация</string>
    <string name="title_Tranzactions">Операциялар</string>
    <string name="title_History">Транзакция тарихы</string>
    <string name="title_balance">Ағымдағы теңгерім</string>
    <string name="title_activity_current_balance">Ағымдағы теңгерім</string>
    <string name="title_activity_history_transactions">Транзакция тарихы</string>
    <string name="content_about2">Дәл қазір транзакциялар тарихын немесе ағымдағы балансты тексеріңіз!</string>
    <string name="content_about">ENUBank-осы мобильді қосымшаның көмегімен ақшаны бірден жіберіңіз және алыңыз!</string>
    <string name="button_feedback">Пікір жіберу</string>
    <string name="feedback">Кері байланыс</string>
    <string name="feedback_send">Кері байланыс сәтті жіберілді! Рахмет!</string>
    <string name="about">Туралы</string>
    <string name="btnJson">Алынған ақша</string>
    <string name="moneyReceived">Сізде жаңа табыс бар!</string>
    <string name="moneySendHistory">Ақша жіберу</string>
    <string name="status">Мәртебесі</string>
    <string name="all_transactions">Барлық Транзакциялар</string>
    <string name="incorrect_user">Пайдаланушы аты немесе пароль дұрыс емес!</string>
    <string name="title_activity_received_transaction">Алынған ақша </string>
    <string name="see_received_transactions">Алынған транзакцияларды қарау</string>
    <string name="received_transactions">Табыс</string>
    <string name="transaction_removed">Мәміле жойылды!</string>
    <string name="deletion_canceled">Жою жойылды!</string>
    <string name="delete_dialog_title">Транзакцияны жою!</string>
    <string name="delete_dialog_message">Сіз жойғыңыз келеді ме бұл транзакция?</string>
    <string name="yes_alert_dialog">Иә</string>
    <string name="no_alert_dialog">Жоқ</string>
    <string name="delete_account">Аккаунты жойю</string>
    <string name="raports">Есептер</string>
    <string-array name="spinner_status">
        <item>Жіберу</item>
        <item>Сұраңыз</item>
    </string-array>
    <string name="title_activity_raports">Есептер</string>
    <string name="raport_amount">Сома бойынша барлық транзакциялар</string>
    <string name="raport_send">Әрбір жіберілген транзакцияны алушының аты </string>
    <string name="title_activity_raport_amount">Жіберілген сома бойынша есеп</string>
    <string name="view_raport">Есепті қарау</string>
    <string name="save_raport">Есепті мәтіндік файлға сақтау</string>
    <string name="raport_saved_successfully">Есеп сәтті сақталды!</string>
    <string name="title_activity_raport_send">Жіберілген ақша үшін есеп</string>
    <string name="enough_money">Сізде ақша жоқ!</string>
    <string name="refresh">Жаңарту</string>
    <string name="suggestion_deleted">Ұсыныс жойылды</string>
    <string name="title_activity_chart">Диаграмма</string>
    <string name="transactions_send">Ақша жіберілді</string>
    <string name="transactions_asked">Ақша сұрады</string>
    <string name="title_activity_maps">Карта</string>
    <string name="view_map">Картаны Қарау</string>
    <string name="view_all_cities_where_you_can_find_pocketbank">ENUBank таба алатын барлық қалаларды қарап шығыңыз!</string>
    <string name="account_number">Шот нөмірі</string>
    <string name="cannot_delete_tranzaction">Бұл транзакция өшірілмеді</string>
    <string name="transaction_done_toast">Орындалған транзакцияны көру үшін транзакциялар тізімін тексеріңіз</string>
    <string name="account_erased">Тіркелгі жойылды</string>
    <string name="cannot_delete_user">Пайдаланушыны өшіру мүмкін емес</string>
</resources>
