<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@drawable/about_us"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MoneyActivity"
    tools:showIn="@layout/activity_money"
    >

    <TextView
        android:id="@+id/tv_transactions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/please_complete_the_details_of_the_transaction"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_beneficiary2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgmoney2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:ems="10"
        android:hint="@string/beneficiary_name"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imgmoney2"
        android:layout_width="174dp"
        android:layout_height="139dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/moneytransparent" />

    <EditText
        android:id="@+id/et_accountNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_beneficiary2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/account_number" />

    <EditText
        android:id="@+id/et_amount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_accountNumber2"
        android:layout_marginLeft="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/amount" />

    <Button
        android:id="@+id/btn_send2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_amount2"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="63dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/check"
        android:text="@string/send_money" />

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_below="@+id/et_amount2"
        android:layout_width="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />

</RelativeLayout>