<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SelectActivity"
    android:background="@drawable/backk"
    tools:showIn="@layout/activity_select">

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="66dp"
        android:layout_height="58dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="88dp"
        android:background="@drawable/redlogo"
        app:layout_constraintEnd_toStartOf="@+id/imgMoney"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMoney"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moneyflow" />

    <ImageView
        android:id="@+id/imgHistory"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMoney"
        app:srcCompat="@drawable/history" />

    <Button
        android:id="@+id/btnInfos"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginStart="160dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_infos"
        app:layout_constraintEnd_toStartOf="@+id/imgInfo"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgInfo"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tv_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="232dp"
        android:text="@string/title_infos"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgInfo" />

    <TextView
        android:id="@+id/tv_currentBallance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:text="@string/current_balance"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMoney" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:text="@string/title_History"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHistory" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="107dp"
        android:layout_height="113dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="410dp"
        android:layout_marginBottom="120dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/imgHistory"
        app:layout_constraintTop_toBottomOf="@+id/tv_infos"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/btnCurentBal"
        android:layout_width="104dp"
        android:layout_height="89dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="92dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReceivedTransactions"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/imgHistory"
        app:layout_constraintTop_toBottomOf="@+id/btnCurentBal" />

    <ImageView
        android:id="@+id/imgReceivedTranz"
        android:layout_width="64dp"
        android:layout_height="59dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/imgHistory"
        app:layout_constraintTop_toBottomOf="@+id/btnCurentBal"
        app:srcCompat="@drawable/profit" />

    <TextView
        android:id="@+id/tv_receivedTransactions"
        android:layout_width="131dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/received_transactions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/tv_history"
        app:layout_constraintTop_toBottomOf="@+id/imgReceivedTranz" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/trash"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_receivedTransactions" />

    <Button
        android:id="@+id/btnRaport"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/report"
        android:text="@string/raports"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>